# ledgy

./: README.md  pyproject.toml
ledgy_cli/: cli.py  config.py
ledgy_cli/src/api/: main.py
ledgy_cli/src/commands/: add.py  ask.py  common.py
ledgy_cli/src/core/: ledger_agent_service.py  ledger_agent_tools.py  transaction_extraction_service.py
ledgy_cli/src/extractors/: base.py  document.py  factory.py  image.py  text.py
ledgy_cli/src/models/: transaction.py
ledgy_cli/src/prompts/: AGENT_SYSTEM.md  OCR.md  SYSTEM.md  TEST.md  get_prompt.py
ledgy_cli/src/utils/: ledger.py
