[project]
name = "ledgy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.20.0",
    "langchain[openai]>=1.1.0",
    "markitdown[all]>=0.1.3",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "PyYAML>=6.0.1",
    "smolagents[toolkit]>=1.23.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
ledgy = "ledgy_cli.cli:app"

[tool.setuptools.package-data]
"ledgy_cli" = ["**/*.md"] # Включает все md файлы внутри пакета
